...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">z

        <EditText
            android:id="@+id/addName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_name"
            app:layout_constraintBottom_toTopOf="@+id/openingTime"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="5"
            android:hint="@string/hint_city"
            app:layout_constraintBottom_toBottomOf="@+id/addZip"
            app:layout_constraintStart_toStartOf="@+id/addButton"
            app:layout_constraintTop_toTopOf="@+id/addZip"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/addAddress"
            android:layout_width="wrap_content"
...
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:ems="7"
            android:hint="@string/hint_street"
            app:layout_constraintBottom_toTopOf="@+id/addZip"
            app:layout_constraintStart_toStartOf="@+id/addZip"
            app:layout_constraintTop_toBottomOf="@+id/addDescription"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/addZip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
