...
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dialog_add_spaeti">Add new Späti?</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="list">List</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="hint_name">Name*</string>
    <string name="hint_opening_time">Opening Time</string>
    <string name="hint_closing_time">Closing Time</string>
    <string name="hint_description">Description</string>
    <string name="hint_street">Street*</string>
    <string name="hint_zip">Zip*</string>
    <string name="hint_country">Country*</string>
...
